<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UpdateUserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:paddingLeft="@dimen/spacing_medium"
            android:text="@string/editUserTitile"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                android:layout_weight=".9"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight=".5"
                    android:src="@drawable/boy"
                   />

                <TextView
                    android:id="@+id/weekofday"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/xhe" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight=".5" />

                <ImageView
                    android:id="@+id/boy"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight=".5"
                    android:src="@drawable/girl"
                    />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/xshe" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight=".5" />
            </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:hint="@string/r_first_name"
            android:inputType="textCapSentences"
            android:textColorHint="@drawable/selector" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:hint="@string/r_last_name"
            android:inputType="textCapSentences"
            android:textColorHint="@drawable/selector" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xaln" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/edtMobileOb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:layout_weight=".8" />

            <Button
                android:id="@+id/addM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/xad"
                android:textAllCaps="false"></Button>

            <Button
                android:id="@+id/EditM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/xadi"
                android:textAllCaps="false"
                android:visibility="gone"></Button>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xalm" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/edtEmailOb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:layout_weight=".8"
                />

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/xad"
                android:textAllCaps="false"></Button>

            <Button
                android:id="@+id/Edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/xadi"
                android:textAllCaps="false"
                android:visibility="gone"></Button>
        </LinearLayout>
        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="#08AE9E"
            android:text="@string/editUserUpdate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>