<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.AdvertisementExpandableListActivity">
    <!-- Header aligned to top -->


        <LinearLayout
            android:id="@+id/head1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/naviBtn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".1"
                android:src="@drawable/navi_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight=".1"
                    android:src="@drawable/tlogo" />


            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/searchAddress"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="2dp"
                android:layout_weight=".6"
                android:background="@drawable/edittextstyle_for_bank"
                android:gravity="left|center"
                android:hint="@string/xsearch"
                android:inputType="textCapSentences"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="15sp"
                android:visibility="gone"></AutoCompleteTextView>

            <ImageView
                android:id="@+id/settings"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".1"
                android:src="@drawable/settings_icon" />

            <ImageView
                android:id="@+id/maps"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".1"
                android:src="@drawable/map_icon" />
            <ImageView
                android:id="@+id/refreshData"
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="3dp"
                android:layout_weight=".1"
                android:background="@drawable/custom_but_background"
                android:src="@drawable/refresh" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/sphs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/xshp"
                android:textColor="#FF0000"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:id="@+id/btnshopPrec"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="#08AE9E"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/setmyprec"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noadshid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/xnadshp"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ExpandableListView
                android:id="@+id/list_advertisement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="5dp"
                android:groupIndicator="@null" />
        </LinearLayout>


</LinearLayout>